--- a/README.Rmd
+++ b/README.Rmd
@@ -32,6 +32,8 @@ The goal of `aurinapi` is to provide an easy way for R users to access **MORE TH
 
 > https://aurin.org.au/resources/aurin-apis/sign-up/
 
+**AURIN** is "*Australia’s 🦘 single largest resource for accessing clean, integrated, spatially enabled and research-ready data on issues surrounding health and wellbeing, socio-economic metrics, transportation, and land-use.*"
+
 ## Installation
 
 You can install the released version of `aurinapi` from [GitHub](https://github.com/asiripanich/aurinapi) with:
