--- a/README.Rmd
+++ b/README.Rmd
@@ -49,19 +49,19 @@ This package requires the [sf](https://github.com/r-spatial/sf) package. Please 
 
 Let's recreate this [AURIN API AND R](https://aurin.org.au/resources/aurin-apis/aurin-open-api-and-r/) example using `aurinapi`.
 
-First, you must add your [AURIN API username and password](https://aurin.org.au/resources/aurin-apis/sign-up/) as an R environment variable to your `.Renviron` file. `aurinapi` provides `aurinapi_register()` function to help you with this step. If you choose to set `add_to_renviron = TRUE` you won't need to run this step again on current machine after you restart your R session.
+First, you must add your [AURIN API username and password](https://aurin.org.au/resources/aurin-apis/sign-up/) as an R environment variable to your `.Renviron` file. `aurinapi` provides `aur_register()` function to help you with this step. If you choose to set `add_to_renviron = TRUE` you won't need to run this step again on current machine after you restart your R session.
 
 ``` r
 library(aurinapi)
 
 # add_to_renviron = TRUE, so you won't need to run this step again on current machine.
-aurinapi_register(username = "your-username", password = "your-password", add_to_renviron = T)  
+aur_register(username = "your-username", password = "your-password", add_to_renviron = T)  
 ```
 
-`aurinapi_browse()` opens [the data catalogue of AURIN](https://data.aurin.org.au/dataset) on your default browser.
+`aur_browse()` opens [the data catalogue of AURIN](https://data.aurin.org.au/dataset) on your default browser.
 
 ``` r
-aurinapi_browse()
+aur_browse()
 ```
 
 Identify the '**AURIN Open API ID**' field on the 'Additional Info' table of the dataset that you want to download. For example, for this [public toilet 2017 dataset](https://data.aurin.org.au/dataset/au-govt-dss-national-public-toilets-2017-na) its '**AURIN Open API ID**' field is `"aurin:datasource-UQ_ERG-UoM_AURIN_DB_public_toilets"`.
@@ -69,20 +69,20 @@ Identify the '**AURIN Open API ID**' field on the 'Additional Info' table of the
 > Note that, some datasets on AURIN may not have '**AURIN Open API ID**', meaning that it cannot be downloaded via their API.
 
 
-Alternatively, you may use `aurinapi_meta` to search datasets without leaving  your R console.
+Alternatively, you may use `aur_meta` to search datasets without leaving  your R console.
 
 ```{r}
-meta = aurinapi_meta()
+meta = aur_meta()
 # print out the first five rows
 knitr::kable(head(meta))
 ```
 
-Use `aurinapi_get()` to download the dataset.
+Use `aur_get()` to download the dataset.
 
 ```{r}
 # download this public toilet dataset.
 open_api_id = "aurin:datasource-UQ_ERG-UoM_AURIN_DB_public_toilets"
-public_toilets = aurinapi_get(open_api_id = open_api_id)
+public_toilets = aur_get(open_api_id = open_api_id)
 ```
 
 Let's visualise the data using the `ggplot2` package.
@@ -119,7 +119,7 @@ Get all the datasets in parallel.
 
 ```r
 toilet_datasets_ids = meta$aurin_open_api_id[grepl("toilet", meta$title, ignore.case = T)]
-data_lst = furrr::future_map(toilet_datasets_ids, aurinapi_get)
+data_lst = furrr::future_map(toilet_datasets_ids, aur_get)
 ```
 
 
