--- a/README.Rmd
+++ b/README.Rmd
@@ -9,7 +9,7 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
   fig.path = "man/figures/README-",
-  out.width = "100%", 
+  out.width = "100%",
   cache = TRUE
 )
 
@@ -72,7 +72,7 @@ Identify the '**AURIN Open API ID**' field on the 'Additional Info' table of the
 Alternatively, you may use `aur_meta` to search datasets without leaving  your R console.
 
 ```{r}
-meta = aur_meta()
+meta <- aur_meta()
 # print out the first five rows
 knitr::kable(head(meta))
 ```
@@ -81,8 +81,10 @@ Use `aur_get()` to download the dataset.
 
 ```{r}
 # download this public toilet dataset.
-open_api_id = "aurin:datasource-UQ_ERG-UoM_AURIN_DB_public_toilets"
-public_toilets = aur_get(open_api_id = open_api_id)
+open_api_id <- "aurin:datasource-UQ_ERG-UoM_AURIN_DB_public_toilets"
+public_toilets <- aur_get(open_api_id = open_api_id)
+state_polygons <- aur_get(open_api_id = "aurin:datasource-AU_Govt_ABS-UoM_AURIN_DB_GeoLevel_ste_2016_aust")
+state_polygons <- state_polygons[state_polygons$state_code_2016 %in% 1:8, ]
 ```
 
 Let's visualise the data using the `ggplot2` package.
@@ -91,8 +93,13 @@ Let's visualise the data using the `ggplot2` package.
 # If you don't have the package you can install it with `install.packages("ggplot2")`.
 library(ggplot2)
 ggplot(public_toilets) +
-  geom_sf() +
-  labs(title = "Public toilets in Australia, 2017")
+  geom_sf(data = state_shp, fill = "antiquewhite") +
+  geom_sf(alpha = 0.05, aes(color = isopen, shape = isopen)) +
+  labs(title = "Public toilets in Australia, 2017") +
+  scale_color_brewer(palette = "Dark2") +
+  theme_bw() +
+  guides(colour = guide_legend(override.aes = list(alpha = 1))) +
+  theme(panel.background = element_rect(fill = "aliceblue"))
 ```
 
 See [here](https://data.aurin.org.au/group/aurin-api) to find available datasets.
@@ -118,8 +125,8 @@ knitr::kable(meta[grepl("toilet", meta$title, ignore.case = T), ])
 Get all the datasets in parallel.
 
 ```r
-toilet_datasets_ids = meta$aurin_open_api_id[grepl("toilet", meta$title, ignore.case = T)]
-data_lst = furrr::future_map(toilet_datasets_ids, aur_get)
+toilet_datasets_ids <- meta$aurin_open_api_id[grepl("toilet", meta$title, ignore.case = T)]
+data_lst <- furrr::future_map(toilet_datasets_ids, aur_get)
 ```
 
 
