--- a/README.Rmd
+++ b/README.Rmd
@@ -19,7 +19,7 @@ library(aurin)
 # aurin
 
 <!-- badges: start -->
-![GitHub release (latest by date including pre-releases)](https://img.shields.io/github/v/release/asiripanich/aurin?include_prereleases)
+![](https://www.r-pkg.org/badges/version-ago/aurin)
 [![R-CMD-check](https://github.com/asiripanich/aurin/workflows/R-CMD-check/badge.svg)](https://github.com/asiripanich/aurin/actions)
 <!-- badges: end -->
 
@@ -35,9 +35,12 @@ The goal of `aurin` is to provide an easy way for R users to access **MORE THAN 
 
 ## Installation
 
-You can install the released version of `aurin` from [GitHub](https://github.com/asiripanich/aurin) with:
+Here are ways you can install `aurin`:
 
 ``` r
+# from CRAN for the latest version
+install.packages("aurin")
+# from GitHub for the latest development version
 install.packages("remotes")
 remotes::install_github("asiripanich/aurin")
 ```
