--- a/README.Rmd
+++ b/README.Rmd
@@ -16,28 +16,32 @@ knitr::opts_chunk$set(
   out.width = "100%",
   cache = FALSE
 )
-
-library(aurin)
 ```
 
-# aurin
+# notaurin
 
 <!-- badges: start -->
-![](https://www.r-pkg.org/badges/version-ago/aurin)
-[![R-CMD-check](https://github.com/asiripanich/aurin/workflows/R-CMD-check/badge.svg)](https://github.com/asiripanich/aurin/actions)
-[![](https://cranlogs.r-pkg.org/badges/aurin)](https://cran.r-project.org/package=aurin)
-[![](https://cranlogs.r-pkg.org/badges/grand-total/aurin)](https://CRAN.R-project.org/package=aurin)
+
+![](https://www.r-pkg.org/badges/version-ago/aurin) [![R-CMD-check](https://github.com/asiripanich/aurin/workflows/R-CMD-check/badge.svg)](https://github.com/asiripanich/aurin/actions) [![](https://cranlogs.r-pkg.org/badges/aurin)](https://cran.r-project.org/package=aurin) [![](https://cranlogs.r-pkg.org/badges/grand-total/aurin)](https://CRAN.R-project.org/package=aurin)
+
 <!-- badges: end -->
 
 <p align="center">
   <img src="https://aurin.org.au/wp-content/uploads/2018/07/aurin-logo-400.png" />
 </p>
 
-The goal of `aurin` is to provide an easy way for R users to access **MORE THAN 5000 OPEN DATASETS** on  [AURIN](https://aurin.org.au/) using their [API](https://aurin.org.au/resources/aurin-apis/aurin-open-api-and-r/). You can request a **FREE** API key from:
+<p align="center">
+  🚧  <b> First warning! The `notaurin` package is not affiliated with AURIN.</b> 🚧
+  <br>
+  🚧  <b> Second warning! The old `aurin` package which is also not affiliated with AURIN will be retiring from CRAN by 26th of May 2022 as per AURIN's request. However, the new `notaurin` package will make its way to CRAN before that to make sure this transition is as unintrusive as possible</b> 🚧
+</p>
 
-> https://aurin.org.au/resources/aurin-apis/sign-up/
+The goal of `notaurin` is to provide an easy way for R users to access **MORE THAN 5000 OPEN DATASETS** on [AURIN](https://aurin.org.au/) using their [API](https://aurin.org.au/resources/aurin-apis/aurin-open-api-and-r/).
+You can request a **FREE** API key from:
 
-**AURIN** is "*Australia’s 🦘 single largest resource for accessing clean, integrated, spatially enabled and research-ready data on issues surrounding health and wellbeing, socio-economic metrics, transportation, and land-use.*"
+> <https://aurin.org.au/resources/aurin-apis/sign-up/>
+
+**AURIN** is "*Australia’s :kangaroo: single largest resource for accessing clean, integrated, spatially enabled and research-ready data on issues surrounding health and wellbeing, socio-economic metrics, transportation, and land-use.*"
 
 ## Installation
 
@@ -45,19 +49,22 @@ Here are ways you can install `aurin`:
 
 ``` r
 # from CRAN for the latest version
-install.packages("aurin")
+install.packages("notaurin")
 # from GitHub for the latest development version
 install.packages("remotes")
-remotes::install_github("asiripanich/aurin")
+remotes::install_github("asiripanich/notaurin")
 ```
 
-This package requires the [sf](https://github.com/r-spatial/sf) package. Please see the sf package's [GitHub page](https://github.com/r-spatial/sf) to install its non R dependencies.
+This package requires the [sf](https://github.com/r-spatial/sf) package.
+Please see the sf package's [GitHub page](https://github.com/r-spatial/sf) to install its non R dependencies.
 
 ## Example
 
 Let's recreate this [AURIN API AND R](https://aurin.org.au/resources/aurin-apis/aurin-open-api-and-r/) example using `aurin`.
 
-First, you must add your [AURIN API username and password](https://aurin.org.au/resources/aurin-apis/sign-up/) as an R environment variable to your `.Renviron` file. `aurin` provides `aur_register()` function to help you with this step. If you choose to set `add_to_renviron = TRUE` you won't need to run this step again on current machine after you restart your R session.
+First, you must add your [AURIN API username and password](https://aurin.org.au/resources/aurin-apis/sign-up/) as an R environment variable to your `.Renviron` file.
+`aurin` provides `aur_register()` function to help you with this step.
+If you choose to set `add_to_renviron = TRUE` you won't need to run this step again on current machine after you restart your R session.
 
 ``` r
 library(aurin)
@@ -72,14 +79,15 @@ aur_register(username = "your-username", password = "your-password", add_to_renv
 aur_browse()
 ```
 
-Identify the '**AURIN Open API ID**' field on the 'Additional Info' table of the dataset that you want to download. For example, for this [public toilet 2017 dataset](https://data.aurin.org.au/dataset/au-govt-dss-national-public-toilets-2017-na) its '**AURIN Open API ID**' field is `"aurin:datasource-UQ_ERG-UoM_AURIN_DB_public_toilets"`.
+Identify the '**AURIN Open API ID**' field on the 'Additional Info' table of the dataset that you want to download.
+For example, for this [public toilet 2017 dataset](https://data.aurin.org.au/dataset/au-govt-dss-national-public-toilets-2017-na) its '**AURIN Open API ID**' field is `"aurin:datasource-UQ_ERG-UoM_AURIN_DB_public_toilets"`.
 
 > Note that, some datasets on AURIN may not have '**AURIN Open API ID**', meaning that it cannot be downloaded via their API.
 
-
-Alternatively, you may use `aur_meta` to search datasets without leaving  your R console.
+Alternatively, you may use `aur_meta` to search datasets without leaving your R console.
 
 ```{r}
+library(notaurin)
 meta <- aur_meta()
 # print out the first five rows
 knitr::kable(head(meta))
@@ -97,7 +105,8 @@ state_polygons <- state_polygons[state_polygons$state_code_2016 %in% 1:8, ]
 
 Let's visualise the data using the `ggplot2` package.
 
-```{r example-public-toilet-plot, dpi = 300, fig.path = "man/figures/README-"}
+
+``` r 
 # If you don't have the package you can install it with `install.packages("ggplot2")`.
 library(ggplot2)
 ggplot(public_toilets) +
@@ -109,6 +118,8 @@ ggplot(public_toilets) +
   guides(colour = guide_legend(override.aes = list(alpha = 1))) +
   theme(panel.background = element_rect(fill = "aliceblue"))
 ```
+
+<img src="man/figures/README-example-public-toilet-plot-1.png" width="100%" />
 
 See [here](https://data.aurin.org.au/group/aurin-api) to find available datasets.
 
