--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,7 @@ knitr::opts_chunk$set(
   out.width = "100%",
   cache = FALSE
 )
+library(notaurin)
 ```
 
 # notaurin
@@ -63,11 +64,11 @@ Please see the sf package's [GitHub page](https://github.com/r-spatial/sf) to in
 Let's recreate this [AURIN API AND R](https://aurin.org.au/resources/aurin-apis/aurin-open-api-and-r/) example using `aurin`.
 
 First, you must add your [AURIN API username and password](https://aurin.org.au/resources/aurin-apis/sign-up/) as an R environment variable to your `.Renviron` file.
-`aurin` provides `aur_register()` function to help you with this step.
+`notaurin` provides `aur_register()` function to help you with this step.
 If you choose to set `add_to_renviron = TRUE` you won't need to run this step again on current machine after you restart your R session.
 
 ``` r
-library(aurin)
+library(notaurin)
 
 # add_to_renviron = TRUE, so you won't need to run this step again on current machine.
 aur_register(username = "your-username", password = "your-password", add_to_renviron = T)  
@@ -87,7 +88,6 @@ For example, for this [public toilet 2017 dataset](https://data.aurin.org.au/dat
 Alternatively, you may use `aur_meta` to search datasets without leaving your R console.
 
 ```{r}
-library(notaurin)
 meta <- aur_meta()
 # print out the first five rows
 knitr::kable(head(meta))
